--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         php-version: '8.0'
     - uses: actions/checkout@v2
     - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      run: cp .env.ci .env
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
@@ -38,11 +38,4 @@ jobs:
     - name: Run migrations and seeders
       run: php artisan migrate:fresh --seed
     - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: pgsql
-        DB_HOST: postgres
-        DB_PORT: 5432
-        DB_DATABASE: test
-        DB_USERNAME: postgres
-        DB_PASSWORD: postgres
       run: php artisan test
