--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,6 @@ jobs:
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Run migrations and seeders
-      run: php artisan migrate:fresh --seed
+      run: php artisan migrate:fresh --seed --force
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       run: php artisan test
