build(ci): inicia servicio pgsql y cambia forward de puertos

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,16 +14,19 @@ jobs:
       postgres:
         image: postgres:12-alpine
         env:
-          POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: postgres
           POSTGRES_DB: test
         ports:
-          - 5432:5432
+          - 5432/tcp
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+    - name: Init container with PHP 8.0
+      uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.0'
+    - name: Start pgsql service
+      run: sudo /etc/init.d/postgresql start
     - uses: actions/checkout@v2
     - name: Copy .env
       run: cp .env.ci .env
