--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,20 @@
-name: CI
+name: CI InstantSchool
 
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'app/**'
+      - 'tests/**'
   pull_request:
     branches: [ main ]
+    paths:
+      - 'app/**'
+      - 'tests/**'
 
 jobs:
-  laravel-ci:
-    name: Laravel PHP 8.0
+  laravel:
+    name: Laravel (PHP ${{ matrix.php-versions }})
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -20,23 +26,44 @@ jobs:
         ports:
           - 5432/tcp
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    strategy:
+      fail-fast: false
+      matrix:
+        php-versions: ['8.0']
     steps:
-    - name: Init container with PHP 8.0
-      uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.0'
-    - name: Start pgsql service
-      run: sudo /etc/init.d/postgresql start
-    - uses: actions/checkout@v2
-    - name: Copy .env
-      run: cp .env.ci .env
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Run migrations and seeders
-      run: php artisan migrate:fresh --seed --force
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      run: php artisan test
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup PHP, with composer and extensions
+        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
+        with:
+          php-version: ${{ matrix.php-versions }}
+          extensions: mbstring, dom, fileinfo, pgsql
+      - name: Start pgsql service
+        run: sudo /etc/init.d/postgresql start
+      - name: Get composer cache directory
+        id: composercache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+      - name: Cache composer dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composercache.outputs.dir }}
+          # Use composer.json for key, if composer.lock is not committed.
+          # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+      - name: Install Composer dependencies
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
+      - name: Copy .env
+        run: cp .env.ci .env
+      - name: Generate App Key
+        run: php artisan key:generate
+      - name: Migrate Test Database
+        run: php artisan migrate --env=testing --seed --force
+        env:
+          DB_PORT: ${{ job.services.postgres.ports['5432'] }}
+      - name: Change Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
+      - name: Execute tests (Unit and Feature tests) via PHPUnit
+        run: php artisan test
+        env:
+          DB_PORT: ${{ job.services.postgres.ports['5432'] }}
