--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
-        "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "lorisleiva/laravel-actions": "^2.2"
+        "lorisleiva/laravel-actions": "^2.2",
+        "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
