--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^8.75",
         "laravel/tinker": "^2.5",
         "lorisleiva/laravel-actions": "^2.2",
+        "spatie/laravel-permission": "^5.4",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
