--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,18 @@
         "php": "^8.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.75",
+        "laravel/framework": "^9.0",
         "laravel/tinker": "^2.5",
         "lorisleiva/laravel-actions": "^2.2",
         "spatie/laravel-permission": "^5.4",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.13",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
+        "nunomaduro/collision": "^6.1",
         "nunomaduro/phpinsights": "^2.0",
         "phpunit/phpunit": "^9.5.10"
     },
