--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ on:
     paths:
       - "app/**"
       - "tests/**"
+      - ".github/**"
   pull_request:
     branches:
       - "main"
@@ -27,6 +28,7 @@ on:
     paths:
       - "app/**"
       - "tests/**"
+      - ".github/**"
 jobs:
   laravel-ci:
     name: Laravel PHP 8.1
