--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,14 @@
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
-        "spatie/laravel-ignition": "^1.0",
+        "brianium/paratest": "^6.4",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.13",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "nunomaduro/phpinsights": "^2.0",
-        "phpunit/phpunit": "^9.5.10"
+        "phpunit/phpunit": "^9.5.10",
+        "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
         "psr-4": {
