--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,13 @@ on:
       - "tests/**"
 jobs:
   laravel-ci:
-    name: Laravel PHP 8.1
+    name: Build & Test
     runs-on: ubuntu-latest
     steps:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.1'
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Copy .env
       run: cp .env.ci .env
     - name: Install Dependencies
