--- a/.env.ci
+++ b/.env.ci
@@ -1,7 +1,7 @@
 APP_KEY=
 JWT_SECRET=
 DB_CONNECTION=pgsql
-DB_HOST=localhost
+DB_HOST=postgres
 DB_PORT=5432
 DB_DATABASE=test
 DB_USERNAME=postgres
