--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,5 +43,5 @@ jobs:
       run: chmod -R 777 storage bootstrap/cache
     - name: Run migrations and seeders
       run: php artisan migrate:fresh --seed --force
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
+    - name: Execute tests
       run: php artisan test --parallel
