--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.0",
         "laravel/tinker": "^2.5",
         "lorisleiva/laravel-actions": "^2.2",
+        "spatie/laravel-data": "^3.7",
         "spatie/laravel-permission": "^5.4",
         "tymon/jwt-auth": "^2.0"
     },
