--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^10.0",
         "laravel/tinker": "^2.5",
         "lorisleiva/laravel-actions": "^2.2",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-data": "^3.7",
         "spatie/laravel-permission": "^5.4",
         "tymon/jwt-auth": "^2.0"
