--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.0",
         "dedoc/scramble": "^0.8.4",
         "doctrine/dbal": "^3.7",
         "guzzlehttp/guzzle": "^7.0.1",
