--- a/composer.json
+++ b/composer.json
@@ -5,28 +5,28 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.3",
         "barryvdh/laravel-dompdf": "^2.0",
-        "dedoc/scramble": "^0.8.4",
+        "dedoc/scramble": "^v0.12.21",
         "doctrine/dbal": "^3.7",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^10.0",
+        "laravel/framework": "^11.0",
         "laravel/tinker": "^2.5",
         "lorisleiva/laravel-actions": "^2.2",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-data": "^3.7",
-        "spatie/laravel-permission": "^5.4",
+        "spatie/laravel-permission": "^6.20.0",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
-        "brianium/paratest": "^6.4",
+        "brianium/paratest": "^v7.7.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.10",
         "laravel/sail": "^1.13",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
+        "nunomaduro/collision": "^8.1",
         "nunomaduro/phpinsights": "^2.0",
-        "phpunit/phpunit": "^9.5.10",
+        "phpunit/phpunit": "^12.2.5",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
